<resources>
    <string name="app_name">Real Made</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="movie_image">Movie Image</string>
    <string name="title_favorite">Favorite</string>
    <string name="movie">Movies</string>
    <string name="favorite">Favorite</string>
    <string name="author_name">Rizky Alfa Uji Gultom</string>
    <string name="workAt">Android Developer at Emveep</string>
    <string name="title_profile">Profile</string>
    <string name="type_popular">popular</string>
    <string name="type_top_rated">top_rated</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="choose_type">Choose Type</string>
    <string name="update">Update</string>
    <string name="popular_movie">Popular Movies</string>
    <string name="top_rated_movie">Top Rated Movies</string>
    <string name="now_playing_movie">Now Playing Movie</string>
    <string name="upcoming_movie">Upcomming Movies</string>
    <string name="please_wait">Please wait..</string>
</resources>